Bug 958645 - Add mouseover effect to non-icons in Australis Customize mode.  r=Gijs, r=dao, ui-r=phlsa
UltraBlame original commit: a36e188dbc74d0ae0696d07c3bb890345ccc20a8

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -3173,7 +3173,7 @@ box
 ;
 position
 :
-absolute
+relative
 ;
 top
 :
@@ -3282,6 +3282,32 @@ hsla
 .
 2
 )
+;
+}
+#
+nav
+-
+bar
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
+-
+moz
+-
+box
+-
+orient
+:
+horizontal
 ;
 }
 #
