--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -971,6 +971,27 @@ toolbarbutton
 toolbarbutton
 -
 icon
+toolbarpaletteitem
+>
+toolbaritem
+.
+panel
+-
+wide
+-
+item
+toolbarpaletteitem
+>
+toolbarbutton
+[
+type
+=
+"
+menu
+-
+button
+"
+]
 {
 transition
 :
@@ -990,6 +1011,8 @@ bezier
 .
 5
 )
+!
+important
 ;
 }
 toolbarpaletteitem
@@ -1011,6 +1034,44 @@ scale
 1
 .
 3
+)
+;
+}
+toolbarpaletteitem
+[
+mousedown
+]
+>
+toolbaritem
+.
+panel
+-
+wide
+-
+item
+toolbarpaletteitem
+[
+mousedown
+]
+>
+toolbarbutton
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+{
+transform
+:
+scale
+(
+1
+.
+1
 )
 ;
 }
