Bug 966275 - DevTools Themes - Change color of main devtools splitter to better match both themes;r=vporof
UltraBlame original commit: 7e577607c4046b3fd5cf080d582e01baebf47608

--- a/browser/themes/shared/devtools/light-theme.css
+++ b/browser/themes/shared/devtools/light-theme.css
@@ -1835,6 +1835,43 @@ bottom
 0
 ;
 }
+.
+devtools
+-
+horizontal
+-
+splitter
+{
+border
+-
+bottom
+:
+1px
+solid
+#
+aaa
+;
+}
+.
+devtools
+-
+side
+-
+splitter
+{
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+#
+aaa
+;
+}
 %
 include
 toolbars
