--- a/browser/themes/shared/devtools/common.css
+++ b/browser/themes/shared/devtools/common.css
@@ -106,8 +106,14 @@ bottom
 :
 1px
 solid
-#
-aaa
+rgba
+(
+118
+121
+125
+.
+5
+)
 ;
 min
 -
@@ -170,8 +176,14 @@ end
 :
 1px
 solid
-#
-aaa
+rgba
+(
+118
+121
+125
+.
+5
+)
 ;
 min
 -
