--- a/browser/base/content/aboutaccounts/fonts.css
+++ b/browser/base/content/aboutaccounts/fonts.css
@@ -56,6 +56,7 @@ format
 woff
 '
 )
+;
 }
 font
 -
@@ -116,6 +117,7 @@ format
 woff
 '
 )
+;
 }
 font
 -
@@ -175,4 +177,5 @@ format
 woff
 '
 )
+;
 }
