--- a/browser/devtools/netmonitor/netmonitor.css
+++ b/browser/devtools/netmonitor/netmonitor.css
@@ -24,13 +24,9 @@ hidden
 ;
 }
 #
-response
+custom
 -
-content
--
-image
--
-box
+pane
 {
 overflow
 :
@@ -38,9 +34,13 @@ auto
 ;
 }
 #
-custom
+response
 -
-pane
+content
+-
+image
+-
+box
 {
 overflow
 :
@@ -57,6 +57,18 @@ blocked
 display
 :
 none
+;
+}
+#
+network
+-
+statistics
+-
+charts
+{
+overflow
+:
+auto
 ;
 }
 media
@@ -122,7 +134,7 @@ max
 -
 width
 :
-1024px
+1280px
 )
 {
 #
@@ -141,7 +153,7 @@ requests
 -
 menu
 -
-footer
+filter
 -
 button
 #
@@ -179,20 +191,6 @@ width
 701px
 )
 {
-#
-requests
--
-menu
--
-spacer
--
-start
-{
-display
-:
-none
-;
-}
 #
 network
 -
