--- a/browser/themes/shared/devtools/netmonitor.inc.css
+++ b/browser/themes/shared/devtools/netmonitor.inc.css
@@ -19,7 +19,7 @@ font
 -
 size
 :
-110
+120
 %
 ;
 }
@@ -59,6 +59,84 @@ color
 :
 #
 585959
+;
+}
+#
+requests
+-
+menu
+-
+perf
+-
+notice
+-
+button
+{
+min
+-
+width
+:
+30px
+;
+min
+-
+height
+:
+28px
+;
+margin
+:
+0
+;
+list
+-
+style
+-
+image
+:
+url
+(
+profiler
+-
+stopwatch
+.
+png
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+16px
+16px
+0px
+)
+;
+}
+#
+requests
+-
+menu
+-
+perf
+-
+notice
+-
+button
+.
+button
+-
+text
+{
+display
+:
+none
 ;
 }
 %
@@ -3490,23 +3568,21 @@ tabpanel
 -
 content
 {
-color
+background
 :
+url
+(
+background
+-
+noise
+-
+toolbar
+.
+png
+)
 #
-f5f7fa
+343c45
 ;
-}
-.
-theme
--
-dark
-.
-tabpanel
--
-summary
--
-label
-{
 color
 :
 #
@@ -3951,9 +4027,9 @@ none
 padding
 :
 2px
-1
+0
 .
-5vw
+75vw
 ;
 }
 .
@@ -4052,9 +4128,7 @@ not
 :
 first
 -
-of
--
-type
+child
 )
 .
 theme
@@ -4074,9 +4148,7 @@ not
 :
 first
 -
-of
--
-type
+child
 )
 {
 -
@@ -4119,9 +4191,7 @@ not
 :
 first
 -
-of
--
-type
+child
 )
 .
 theme
@@ -4141,9 +4211,7 @@ not
 :
 first
 -
-of
--
-type
+child
 )
 {
 -
@@ -4346,13 +4414,905 @@ padding
 -
 top
 :
-2px
+3px
 ;
 font
 -
 weight
 :
 600
+;
+}
+#
+requests
+-
+menu
+-
+network
+-
+summary
+-
+button
+{
+background
+:
+none
+;
+box
+-
+shadow
+:
+none
+;
+border
+-
+color
+:
+transparent
+;
+list
+-
+style
+-
+image
+:
+url
+(
+profiler
+-
+stopwatch
+.
+png
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+16px
+16px
+0px
+)
+;
+-
+moz
+-
+padding
+-
+end
+:
+0
+;
+cursor
+:
+pointer
+;
+}
+#
+requests
+-
+menu
+-
+network
+-
+summary
+-
+label
+{
+-
+moz
+-
+padding
+-
+start
+:
+0
+;
+cursor
+:
+pointer
+;
+}
+#
+requests
+-
+menu
+-
+network
+-
+summary
+-
+label
+:
+hover
+{
+text
+-
+decoration
+:
+underline
+;
+}
+#
+network
+-
+statistics
+-
+toolbar
+{
+border
+:
+none
+;
+margin
+:
+0
+;
+padding
+:
+0
+;
+}
+#
+network
+-
+statistics
+-
+back
+-
+button
+{
+min
+-
+width
+:
+4em
+;
+min
+-
+height
+:
+100vh
+;
+margin
+:
+0
+;
+padding
+:
+0
+;
+border
+-
+radius
+:
+0
+;
+border
+-
+top
+:
+none
+;
+border
+-
+bottom
+:
+none
+;
+-
+moz
+-
+border
+-
+start
+:
+none
+;
+}
+#
+network
+-
+statistics
+-
+view
+-
+splitter
+{
+border
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+;
+cursor
+:
+default
+;
+pointer
+-
+events
+:
+none
+;
+}
+#
+network
+-
+statistics
+-
+charts
+{
+min
+-
+height
+:
+1px
+;
+}
+.
+theme
+-
+dark
+#
+network
+-
+statistics
+-
+charts
+{
+background
+:
+url
+(
+background
+-
+noise
+-
+toolbar
+.
+png
+)
+#
+343c45
+;
+}
+.
+theme
+-
+light
+#
+network
+-
+statistics
+-
+charts
+{
+background
+:
+url
+(
+background
+-
+noise
+-
+toolbar
+.
+png
+)
+#
+f0f1f2
+;
+}
+#
+network
+-
+statistics
+-
+charts
+.
+pie
+-
+chart
+-
+container
+{
+-
+moz
+-
+margin
+-
+start
+:
+3vw
+;
+-
+moz
+-
+margin
+-
+end
+:
+1vw
+;
+}
+#
+network
+-
+statistics
+-
+charts
+.
+table
+-
+chart
+-
+container
+{
+-
+moz
+-
+margin
+-
+start
+:
+1vw
+;
+-
+moz
+-
+margin
+-
+end
+:
+3vw
+;
+}
+.
+theme
+-
+dark
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+html
+]
+{
+fill
+:
+#
+5e88b0
+;
+background
+:
+#
+5e88b0
+;
+}
+.
+theme
+-
+light
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+html
+]
+{
+fill
+:
+#
+5f88b0
+;
+background
+:
+#
+5f88b0
+;
+}
+.
+theme
+-
+dark
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+css
+]
+{
+fill
+:
+#
+46afe3
+;
+background
+:
+#
+46afe3
+;
+}
+.
+theme
+-
+light
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+css
+]
+{
+fill
+:
+#
+0088cc
+;
+background
+:
+#
+0088cc
+;
+}
+.
+theme
+-
+dark
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+js
+]
+{
+fill
+:
+#
+d99b28
+;
+background
+:
+#
+d99b28
+;
+}
+.
+theme
+-
+light
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+js
+]
+{
+fill
+:
+#
+d97e00
+;
+background
+:
+#
+d97e00
+;
+}
+.
+theme
+-
+dark
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+xhr
+]
+{
+fill
+:
+#
+d96629
+;
+background
+:
+#
+d96629
+;
+}
+.
+theme
+-
+light
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+xhr
+]
+{
+fill
+:
+#
+f13c00
+;
+background
+:
+#
+f13c00
+;
+}
+.
+theme
+-
+dark
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+fonts
+]
+{
+fill
+:
+#
+6b7abb
+;
+background
+:
+#
+6b7abb
+;
+}
+.
+theme
+-
+light
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+fonts
+]
+{
+fill
+:
+#
+5b5fff
+;
+background
+:
+#
+5b5fff
+;
+}
+.
+theme
+-
+dark
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+images
+]
+{
+fill
+:
+#
+df80ff
+;
+background
+:
+#
+df80ff
+;
+}
+.
+theme
+-
+light
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+images
+]
+{
+fill
+:
+#
+b82ee5
+;
+background
+:
+#
+b82ee5
+;
+}
+.
+theme
+-
+dark
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+media
+]
+{
+fill
+:
+#
+70bf53
+;
+background
+:
+#
+70bf53
+;
+}
+.
+theme
+-
+light
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+media
+]
+{
+fill
+:
+#
+2cbb0f
+;
+background
+:
+#
+2cbb0f
+;
+}
+.
+theme
+-
+dark
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+flash
+]
+{
+fill
+:
+#
+eb5368
+;
+background
+:
+#
+eb5368
+;
+}
+.
+theme
+-
+light
+.
+chart
+-
+colored
+-
+blob
+[
+name
+=
+flash
+]
+{
+fill
+:
+#
+ed2655
+;
+background
+:
+#
+ed2655
+;
+}
+.
+table
+-
+chart
+-
+row
+-
+label
+[
+name
+=
+cached
+]
+{
+display
+:
+none
+;
+}
+.
+table
+-
+chart
+-
+row
+-
+label
+[
+name
+=
+count
+]
+{
+width
+:
+3em
+;
+text
+-
+align
+:
+end
+;
+}
+.
+table
+-
+chart
+-
+row
+-
+label
+[
+name
+=
+label
+]
+{
+width
+:
+7em
+;
+}
+.
+table
+-
+chart
+-
+row
+-
+label
+[
+name
+=
+size
+]
+{
+width
+:
+7em
+;
+}
+.
+table
+-
+chart
+-
+row
+-
+label
+[
+name
+=
+time
+]
+{
+width
+:
+7em
 ;
 }
 media
@@ -4412,7 +5372,7 @@ label
 padding
 :
 2px
-2vw
+1vw
 ;
 }
 #
