--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -5114,6 +5114,42 @@ button
 button
 -
 icon
+.
+theme
+-
+light
+#
+requests
+-
+menu
+-
+perf
+-
+notice
+-
+button
+.
+button
+-
+icon
+.
+theme
+-
+light
+#
+requests
+-
+menu
+-
+network
+-
+summary
+-
+button
+.
+button
+-
+icon
 {
 filter
 :
