Bug 952277 - DOMNodes can be highlighted and selected from the debugger [Australis]; r=past, vporof
UltraBlame original commit: 790594df4527ceb7ba6a4d0b9ece18df9ee43698

--- a/browser/devtools/shared/widgets/widgets.css
+++ b/browser/devtools/shared/widgets/widgets.css
@@ -433,6 +433,29 @@ variables
 -
 view
 -
+open
+-
+inspector
+.
+variable
+-
+or
+-
+property
+[
+pseudo
+-
+item
+]
+>
+.
+title
+>
+.
+variables
+-
+view
+-
 delete
 .
 variable
@@ -592,6 +615,21 @@ variables
 -
 view
 -
+open
+-
+inspector
+*
+:
+not
+(
+:
+hover
+)
+.
+variables
+-
+view
+-
 add
 -
 property
@@ -607,6 +645,19 @@ variables
 view
 -
 delete
+>
+.
+toolbarbutton
+-
+text
+.
+variables
+-
+view
+-
+open
+-
+inspector
 >
 .
 toolbarbutton
