--- a/browser/themes/shared/devtools/dark-theme.css
+++ b/browser/themes/shared/devtools/dark-theme.css
@@ -766,6 +766,16 @@ variable
 or
 -
 property
+.
+token
+-
+domnode
+.
+variable
+-
+or
+-
+property
 [
 exception
 ]
@@ -780,6 +790,24 @@ color
 :
 #
 bf5656
+;
+}
+.
+variable
+-
+or
+-
+property
+.
+token
+-
+domnode
+{
+font
+-
+weight
+:
+bold
 ;
 }
 .
