--- a/browser/themes/shared/devtools/light-theme.css
+++ b/browser/themes/shared/devtools/light-theme.css
@@ -816,6 +816,16 @@ variable
 or
 -
 property
+.
+token
+-
+domnode
+.
+variable
+-
+or
+-
+property
 [
 exception
 ]
@@ -830,6 +840,24 @@ color
 :
 #
 bf5656
+;
+}
+.
+variable
+-
+or
+-
+property
+.
+token
+-
+domnode
+{
+font
+-
+weight
+:
+bold
 ;
 }
 .
