--- a/browser/themes/shared/devtools/widgets.inc.css
+++ b/browser/themes/shared/devtools/widgets.inc.css
@@ -3936,11 +3936,11 @@ browser
 /
 skin
 /
-identity
+devtools
+/
+vview
 -
-icons
--
-https
+lock
 .
 png
 "
@@ -3957,68 +3957,6 @@ height
 :
 16px
 ;
-opacity
-:
-0
-.
-5
-;
-}
-media
-(
-min
--
-resolution
-:
-2dppx
-)
-{
-.
-variable
--
-or
--
-property
--
-non
--
-writable
--
-icon
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-identity
--
-icons
--
-https
-2x
-.
-png
-"
-)
-;
-background
--
-size
-:
-32px
-;
-}
 }
 .
 variable
@@ -4256,6 +4194,25 @@ variables
 view
 -
 delete
+.
+variables
+-
+view
+-
+container
+[
+actions
+-
+first
+]
+.
+variables
+-
+view
+-
+open
+-
+inspector
 .
 variables
 -
@@ -4562,9 +4519,9 @@ region
 rect
 (
 0
+48px
+16px
 32px
-16px
-16px
 )
 ;
 }
@@ -4576,6 +4533,122 @@ view
 delete
 :
 active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+32px
+16px
+16px
+)
+;
+}
+.
+variable
+-
+or
+-
+property
+:
+focus
+.
+variables
+-
+view
+-
+delete
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+16px
+16px
+0
+)
+;
+}
+.
+variables
+-
+view
+-
+edit
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+vview
+-
+edit
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+16px
+16px
+0
+)
+;
+cursor
+:
+pointer
+;
+padding
+-
+left
+:
+2px
+;
+}
+.
+variables
+-
+view
+-
+edit
+:
+hover
 {
 -
 moz
@@ -4599,8 +4672,70 @@ variables
 view
 -
 edit
+:
+active
 {
-background
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+32px
+16px
+16px
+)
+;
+}
+.
+variable
+-
+or
+-
+property
+:
+focus
+.
+variables
+-
+view
+-
+edit
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+16px
+16px
+0
+)
+;
+}
+.
+variables
+-
+view
+-
+open
+-
+inspector
+{
+list
+-
+style
+-
+image
 :
 url
 (
@@ -4617,27 +4752,119 @@ devtools
 /
 vview
 -
-edit
+open
+-
+inspector
 .
 png
 "
 )
-center
-no
+;
 -
-repeat
-;
-width
+moz
+-
+image
+-
+region
 :
-20px
-;
-height
-:
+rect
+(
+0
 16px
+16px
+0
+)
 ;
 cursor
 :
 pointer
+;
+}
+.
+variables
+-
+view
+-
+open
+-
+inspector
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+48px
+16px
+32px
+)
+;
+}
+.
+variables
+-
+view
+-
+open
+-
+inspector
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+32px
+16px
+16px
+)
+;
+}
+.
+variable
+-
+or
+-
+property
+:
+focus
+.
+variables
+-
+view
+-
+open
+-
+inspector
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+16px
+16px
+0
+)
 ;
 }
 .
