Bug 966601 - Element classes in the breadcrumbs should be colored differently than tag name, r=bgrins
UltraBlame original commit: 9f1c9cf5040f917d2c2f866f3f743ab10edfd5a3

--- a/browser/themes/shared/devtools/widgets.inc.css
+++ b/browser/themes/shared/devtools/widgets.inc.css
@@ -1309,18 +1309,6 @@ breadcrumbs
 widget
 -
 item
-.
-theme
--
-dark
-.
-breadcrumbs
--
-widget
--
-item
--
-classes
 {
 color
 :
@@ -1338,18 +1326,6 @@ breadcrumbs
 widget
 -
 item
-.
-theme
--
-light
-.
-breadcrumbs
--
-widget
--
-item
--
-classes
 {
 color
 :
@@ -1393,6 +1369,44 @@ color
 :
 #
 585959
+;
+}
+.
+theme
+-
+dark
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+classes
+{
+color
+:
+#
+b8c8d9
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+classes
+{
+color
+:
+#
+667380
 ;
 }
 .
