Bug 966639 - The search output panel should use theme colors, r=bgrins
UltraBlame original commit: 16dfbbf8a15947644302ecdae6d3ceb07936e5d0

--- a/browser/themes/shared/devtools/debugger.inc.css
+++ b/browser/themes/shared/devtools/debugger.inc.css
@@ -2166,6 +2166,60 @@ dark
 .
 dbg
 -
+source
+-
+results
+:
+not
+(
+.
+selected
+)
+:
+hover
+{
+background
+-
+color
+:
+#
+181d20
+;
+}
+.
+theme
+-
+light
+.
+dbg
+-
+source
+-
+results
+:
+not
+(
+.
+selected
+)
+:
+hover
+{
+background
+-
+color
+:
+#
+f7f7f7
+;
+}
+.
+theme
+-
+dark
+.
+dbg
+-
 results
 -
 header
