--- a/browser/themes/shared/devtools/widgets.inc.css
+++ b/browser/themes/shared/devtools/widgets.inc.css
@@ -1503,38 +1503,6 @@ color
 black
 ;
 }
-%
-filter
-substitution
-%
-define
-slw_selectionGradient
-linear
--
-gradient
-(
-hsl
-(
-206
-59
-%
-39
-%
-)
-hsl
-(
-206
-59
-%
-29
-%
-)
-)
-%
-define
-slw_selectionTextColor
-#
-fff
 .
 simple
 -
@@ -1553,6 +1521,10 @@ translateZ
 ;
 }
 .
+theme
+-
+dark
+.
 simple
 -
 list
@@ -1564,12 +1536,44 @@ item
 selected
 {
 background
+-
+color
 :
-slw_selectionGradient
+#
+1d4f73
 ;
 color
 :
-slw_selectionTextColor
+#
+f5f7fa
+;
+}
+.
+theme
+-
+light
+.
+simple
+-
+list
+-
+widget
+-
+item
+.
+selected
+{
+background
+-
+color
+:
+#
+4c9ed9
+;
+color
+:
+#
+f5f7fa
 ;
 }
 .
@@ -1597,8 +1601,14 @@ background
 -
 color
 :
-#
-181d20
+rgba
+(
+255
+255
+255
+.
+05
+)
 ;
 }
 .
@@ -1626,8 +1636,14 @@ background
 -
 color
 :
-#
-f7f7f7
+rgba
+(
+0
+0
+0
+.
+05
+)
 ;
 }
 .
