Bug 950915 - Watch for changes to CSS files on disk for source mapped files; r=dcamp
UltraBlame original commit: 70c4ddda20ec4ef91b40c5365e30518d60d0b08c

--- a/browser/themes/shared/devtools/styleeditor.css
+++ b/browser/themes/shared/devtools/styleeditor.css
@@ -66,6 +66,16 @@ dark
 .
 stylesheet
 -
+linked
+-
+file
+.
+theme
+-
+dark
+.
+stylesheet
+-
 saveButton
 {
 color
@@ -107,6 +117,16 @@ stylesheet
 rule
 -
 count
+.
+theme
+-
+light
+.
+stylesheet
+-
+linked
+-
+file
 .
 theme
 -
@@ -168,6 +188,20 @@ stylesheet
 rule
 -
 count
+.
+theme
+-
+light
+.
+splitview
+-
+active
+.
+stylesheet
+-
+linked
+-
+file
 .
 theme
 -
@@ -429,13 +463,77 @@ outline
 .
 stylesheet
 -
-error
+linked
 -
-message
-{
-color
+file
 :
-red
+not
+(
+:
+empty
+)
+{
+-
+moz
+-
+margin
+-
+end
+:
+0
+.
+4em
+;
+}
+.
+stylesheet
+-
+linked
+-
+file
+:
+not
+(
+:
+empty
+)
+:
+before
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+.
+4em
+;
+}
+li
+.
+linked
+-
+file
+-
+error
+.
+stylesheet
+-
+linked
+-
+file
+:
+after
+{
+font
+-
+size
+:
+110
+%
 ;
 }
 .
