Bug 964204 - Australis - glitch when dragging in toolbars, r=jaws
UltraBlame original commit: d33aff1eaaedf0418077b089efcb1065fce6e50d

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -863,6 +863,13 @@ scroll
 ;
 }
 toolbarpaletteitem
+[
+place
+=
+"
+toolbar
+"
+]
 {
 transition
 :
@@ -935,6 +942,17 @@ panel
 customization
 -
 placeholder
+toolbarpaletteitem
+[
+notransition
+]
+[
+place
+=
+"
+toolbar
+"
+]
 toolbarpaletteitem
 [
 notransition
