Bug 882807 - [Australis] Invert the icons for the subview-originating button as well as add the arrow icon. r=Gijs
UltraBlame original commit: dfb245b7efb36d0debe31b5425db0675dd594d16

--- a/browser/themes/shared/menupanel.inc.css
+++ b/browser/themes/shared/menupanel.inc.css
@@ -152,6 +152,46 @@ rect
 ;
 }
 #
+bookmarks
+-
+menu
+-
+button
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+.
+panel
+-
+multiview
+-
+anchor
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+32px
+160px
+64px
+128px
+)
+;
+}
+#
 history
 -
 panelmenu
@@ -192,6 +232,44 @@ rect
 0px
 224px
 32px
+192px
+)
+;
+}
+#
+history
+-
+panelmenu
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+.
+panel
+-
+multiview
+-
+anchor
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+32px
+224px
+64px
 192px
 )
 ;
@@ -573,6 +651,44 @@ rect
 ;
 }
 #
+characterencoding
+-
+button
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+.
+panel
+-
+multiview
+-
+anchor
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+32px
+480px
+64px
+448px
+)
+;
+}
+#
 new
 -
 window
@@ -936,6 +1052,44 @@ rect
 0px
 736px
 32px
+704px
+)
+;
+}
+#
+developer
+-
+button
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+.
+panel
+-
+multiview
+-
+anchor
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+32px
+736px
+64px
 704px
 )
 ;
