--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -8211,6 +8211,46 @@ rect
 ;
 }
 #
+bookmarks
+-
+menu
+-
+button
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+.
+panel
+-
+multiview
+-
+anchor
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+64px
+320px
+128px
+256px
+)
+;
+}
+#
 history
 -
 panelmenu
@@ -8251,6 +8291,44 @@ rect
 0px
 448px
 64px
+384px
+)
+;
+}
+#
+history
+-
+panelmenu
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+.
+panel
+-
+multiview
+-
+anchor
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+64px
+448px
+128px
 384px
 )
 ;
@@ -8632,6 +8710,44 @@ rect
 ;
 }
 #
+characterencoding
+-
+button
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+.
+panel
+-
+multiview
+-
+anchor
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+64px
+960px
+128px
+896px
+)
+;
+}
+#
 new
 -
 window
@@ -8995,6 +9111,44 @@ rect
 0px
 1472px
 64px
+1408px
+)
+;
+}
+#
+developer
+-
+button
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+.
+panel
+-
+multiview
+-
+anchor
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+64px
+1472px
+128px
 1408px
 )
 ;
