--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -1756,23 +1756,17 @@ end
 ;
 background
 -
-image
-:
-url
-(
-magnifying
--
-glass
-.
-png
-)
-;
-background
--
 position
 :
 8px
 center
+;
+background
+-
+size
+:
+11px
+11px
 ;
 background
 -
@@ -1788,6 +1782,114 @@ size
 :
 inherit
 ;
+}
+.
+theme
+-
+dark
+.
+devtools
+-
+searchinput
+{
+background
+-
+image
+:
+url
+(
+magnifying
+-
+glass
+.
+png
+)
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+searchinput
+{
+background
+-
+image
+:
+url
+(
+magnifying
+-
+glass
+-
+light
+.
+png
+)
+;
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+.
+theme
+-
+dark
+.
+devtools
+-
+searchinput
+{
+background
+-
+image
+:
+url
+(
+magnifying
+-
+glass
+2x
+.
+png
+)
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+searchinput
+{
+background
+-
+image
+:
+url
+(
+magnifying
+-
+glass
+-
+light
+2x
+.
+png
+)
+;
+}
 }
 .
 devtools
