Bug 964251 - [Australis] Better styling for Exit Customize button. r=Gijs
UltraBlame original commit: c1375930e0e62c74eebbca7054b2c537febde06f

--- a/browser/themes/osx/customizableui/panelUIOverlay.css
+++ b/browser/themes/osx/customizableui/panelUIOverlay.css
@@ -119,6 +119,47 @@ png
 ;
 }
 #
+main
+-
+window
+[
+customize
+-
+entered
+]
+#
+PanelUI
+-
+customize
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+customizableui
+/
+menuPanel
+-
+customizeFinish
+2x
+.
+png
+)
+;
+}
+#
 PanelUI
 -
 help
