--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -2192,6 +2192,41 @@ png
 ;
 }
 #
+customization
+-
+panelHolder
+#
+PanelUI
+-
+customize
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+customizableui
+/
+menuPanel
+-
+customizeFinish
+.
+png
+)
+;
+}
+#
 PanelUI
 -
 help
@@ -2608,14 +2643,9 @@ ad3434
 ;
 }
 #
-main
+customization
 -
-window
-[
-customize
--
-entered
-]
+panelHolder
 #
 PanelUI
 -
@@ -2627,82 +2657,26 @@ white
 ;
 background
 -
-image
+color
 :
-linear
--
-gradient
-(
 rgb
 (
-41
-123
-204
-)
-rgb
-(
-40
-133
-203
-)
-)
-;
-box
--
-shadow
-:
-inset
-0
-1px
-1px
-rgba
-(
-0
-0
-0
-0
-.
-5
-)
-0
-2px
-rgba
-(
-255
-255
-255
-0
-.
-2
+116
+191
+67
 )
 ;
 text
 -
 shadow
 :
-0
-1px
-0
-rgba
-(
-0
-0
-0
-0
-.
-4
-)
+none
 ;
 }
 #
-main
+customization
 -
-window
-[
-customize
--
-entered
-]
+panelHolder
 #
 PanelUI
 -
@@ -2710,14 +2684,9 @@ customize
 :
 hover
 #
-main
+customization
 -
-window
-[
-customize
--
-entered
-]
+panelHolder
 #
 PanelUI
 -
@@ -2729,24 +2698,13 @@ active
 {
 background
 -
-image
+color
 :
-linear
--
-gradient
-(
 rgb
 (
-38
-115
-191
-)
-rgb
-(
-38
-125
-191
-)
+105
+173
+61
 )
 ;
 }
