Bug 930094 - [Australis] Browser windows sometimes have the nav-bar drawn in the titlebar. r=dao, Gijs.
UltraBlame original commit: cbe26a93c79b4153a52cee43820cf8880adfa4f1

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -424,6 +424,15 @@ chromehidden
 toolbar
 "
 ]
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
 >
 #
 titlebar
@@ -19968,6 +19977,31 @@ png
 ;
 }
 .
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+.
 tabs
 -
 newtab
@@ -20022,186 +20056,6 @@ middle
 .
 png
 )
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-background
--
-end
-2x
-.
-png
-)
-;
-}
-.
-tabbrowser
--
-tab
-:
-hover
->
-.
-tab
--
-stack
->
-.
-tab
--
-background
->
-.
-tab
--
-background
--
-middle
-:
-not
-(
-[
-selected
-=
-true
-]
-)
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-background
--
-middle
-2x
-.
-png
-)
-;
-}
-.
-tabbrowser
--
-tab
-:
-hover
->
-.
-tab
--
-stack
->
-.
-tab
--
-background
->
-.
-tab
--
-background
--
-start
-:
-not
-(
-[
-selected
-=
-true
-]
-)
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-background
--
-start
-2x
-.
-png
-)
-;
-}
-.
-tabbrowser
--
-tab
-:
-hover
->
-.
-tab
--
-stack
->
-.
-tab
--
-background
->
-.
-tab
--
-background
--
-end
-:
-not
-(
-[
-selected
-=
-true
-]
-)
-{
-background
--
-image
-:
 url
 (
 chrome
@@ -20929,6 +20783,20 @@ shadow
 focusRingShadow
 ;
 }
+#
+main
+-
+window
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+>
 #
 titlebar
 {
@@ -31583,6 +31451,7 @@ customize
 -
 entered
 ]
+>
 #
 titlebar
 {
@@ -31600,11 +31469,66 @@ window
 [
 tabsintitlebar
 ]
+:
+not
+(
+[
+customizing
+]
+)
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+#
+main
+-
+window
+[
+tabsintitlebar
+]
 [
 customize
 -
-entered
+entering
 ]
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+#
+main
+-
+window
+[
+tabsintitlebar
+]
+[
+customize
+-
+exiting
+]
+>
+#
+titlebar
+>
 #
 titlebar
 -
@@ -31612,19 +31536,111 @@ content
 {
 margin
 -
+top
+:
+2px
+;
+margin
+-
 bottom
 :
-0px
-!
-important
+11px
 ;
+}
+#
+main
+-
+window
+[
+tabsintitlebar
+]
+[
+customize
+-
+entered
+]
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+#
+main
+-
+window
+:
+not
+(
+[
+tabsintitlebar
+]
+)
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+{
 margin
 -
 top
 :
 11px
-!
-important
+;
+margin
+-
+bottom
+:
+0px
+;
+}
+#
+main
+-
+window
+[
+tabsintitlebar
+]
+:
+-
+moz
+-
+lwtheme
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+{
+margin
+-
+top
+:
+11px
+;
+margin
+-
+bottom
+:
+11px
 ;
 }
 #
@@ -31948,6 +31964,9 @@ main
 -
 window
 [
+tabsintitlebar
+]
+[
 customize
 -
 entered
@@ -31961,6 +31980,19 @@ top
 :
 9px
 ;
+}
+#
+main
+-
+window
+[
+customize
+-
+entered
+]
+#
+TabsToolbar
+{
 background
 -
 clip
