--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1242,6 +1242,20 @@ CAN_DRAW_IN_TITLEBAR
 main
 -
 window
+:
+not
+(
+[
+chromemargin
+]
+)
+>
+#
+titlebar
+#
+main
+-
+window
 [
 inFullscreen
 ]
