[Australis] Backout cbe26a93c79b (bug 930094) for test failures.
UltraBlame original commit: a77d5593a3fc7744a82928d0394ab78187b2aa93

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -424,15 +424,6 @@ chromehidden
 toolbar
 "
 ]
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
 >
 #
 titlebar
@@ -20784,20 +20775,6 @@ focusRingShadow
 ;
 }
 #
-main
--
-window
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
->
-#
 titlebar
 {
 padding
@@ -31451,7 +31428,6 @@ customize
 -
 entered
 ]
->
 #
 titlebar
 {
@@ -31469,178 +31445,31 @@ window
 [
 tabsintitlebar
 ]
-:
-not
-(
-[
-customizing
-]
-)
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
->
-#
-titlebar
->
-#
-titlebar
--
-content
-#
-main
--
-window
-[
-tabsintitlebar
-]
-[
-customize
--
-entering
-]
->
-#
-titlebar
->
-#
-titlebar
--
-content
-#
-main
--
-window
-[
-tabsintitlebar
-]
-[
-customize
--
-exiting
-]
->
-#
-titlebar
->
-#
-titlebar
--
-content
-{
-margin
--
-top
-:
-2px
-;
-margin
--
-bottom
-:
-11px
-;
-}
-#
-main
--
-window
-[
-tabsintitlebar
-]
 [
 customize
 -
 entered
 ]
->
-#
-titlebar
->
-#
-titlebar
--
-content
-#
-main
--
-window
-:
-not
-(
-[
-tabsintitlebar
-]
-)
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
->
-#
-titlebar
->
 #
 titlebar
 -
 content
 {
-margin
--
-top
-:
-11px
-;
 margin
 -
 bottom
 :
 0px
+!
+important
 ;
-}
-#
-main
--
-window
-[
-tabsintitlebar
-]
-:
--
-moz
--
-lwtheme
->
-#
-titlebar
->
-#
-titlebar
--
-content
-{
 margin
 -
 top
 :
 11px
-;
-margin
--
-bottom
-:
-11px
+!
+important
 ;
 }
 #
@@ -31964,9 +31793,6 @@ main
 -
 window
 [
-tabsintitlebar
-]
-[
 customize
 -
 entered
@@ -31980,19 +31806,6 @@ top
 :
 9px
 ;
-}
-#
-main
--
-window
-[
-customize
--
-entered
-]
-#
-TabsToolbar
-{
 background
 -
 clip
