Bug 930094 - [Australis] Browser windows sometimes have the nav-bar drawn in the titlebar. r=dao, Gijs. * * * Fix for 930094 * * * Fix because WTF
UltraBlame original commit: 8a56937c985b8525ca5e32c5a08318cf12ad5f6d

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -424,6 +424,15 @@ chromehidden
 toolbar
 "
 ]
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
 >
 #
 titlebar
@@ -20775,6 +20784,20 @@ focusRingShadow
 ;
 }
 #
+main
+-
+window
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+>
+#
 titlebar
 {
 padding
@@ -31428,6 +31451,7 @@ customize
 -
 entered
 ]
+>
 #
 titlebar
 {
@@ -31445,11 +31469,66 @@ window
 [
 tabsintitlebar
 ]
+:
+not
+(
+[
+customizing
+]
+)
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+#
+main
+-
+window
+[
+tabsintitlebar
+]
 [
 customize
 -
-entered
+entering
 ]
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+#
+main
+-
+window
+[
+tabsintitlebar
+]
+[
+customize
+-
+exiting
+]
+>
+#
+titlebar
+>
 #
 titlebar
 -
@@ -31457,19 +31536,111 @@ content
 {
 margin
 -
+top
+:
+2px
+;
+margin
+-
 bottom
 :
-0px
-!
-important
+11px
 ;
+}
+#
+main
+-
+window
+[
+tabsintitlebar
+]
+[
+customize
+-
+entered
+]
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+#
+main
+-
+window
+:
+not
+(
+[
+tabsintitlebar
+]
+)
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+{
 margin
 -
 top
 :
 11px
-!
-important
+;
+margin
+-
+bottom
+:
+0px
+;
+}
+#
+main
+-
+window
+[
+tabsintitlebar
+]
+:
+-
+moz
+-
+lwtheme
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+{
+margin
+-
+top
+:
+11px
+;
+margin
+-
+bottom
+:
+11px
 ;
 }
 #
@@ -31793,6 +31964,9 @@ main
 -
 window
 [
+tabsintitlebar
+]
+[
 customize
 -
 entered
@@ -31806,6 +31980,19 @@ top
 :
 9px
 ;
+}
+#
+main
+-
+window
+[
+customize
+-
+entered
+]
+#
+TabsToolbar
+{
 background
 -
 clip
