Bug 963083 - [Australis] Background tabs should inherit the text color. r=MattN
UltraBlame original commit: 124eee46ccb642de279a4d7ac9435e205a2bad84

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -20787,6 +20787,11 @@ none
 tabbrowser
 -
 tab
+[
+selected
+=
+true
+]
 :
 not
 (
@@ -20799,14 +20804,7 @@ lwtheme
 {
 color
 :
-#
-333
-;
-text
--
-shadow
-:
-loweredShadow
+inherit
 ;
 }
 .
@@ -21112,6 +21110,30 @@ repeat
 repeat
 -
 x
+;
+}
+#
+TabsToolbar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+{
+color
+:
+#
+333
+;
+text
+-
+shadow
+:
+loweredShadow
 ;
 }
 #
