Bug 963278 - Delay focusing the input field until after resize events are done. r=ehsan
UltraBlame original commit: 6a459bfe76895086f03fda6d54c3442731e739b6

--- a/layout/forms/test/test_bug564115.html
+++ b/layout/forms/test/test_bug564115.html
@@ -171,10 +171,10 @@ height
 "
 )
 ;
-window
+SimpleTest
 .
-childLoaded
-=
+waitForFocus
+(
 function
 (
 )
@@ -329,6 +329,8 @@ win
 )
 ;
 }
+win
+)
 ;
 }
 )
