--- a/browser/metro/theme/netError.css
+++ b/browser/metro/theme/netError.css
@@ -175,15 +175,6 @@ padding
 errorPage
 .
 certerror
-{
-background
--
-color
-:
-#
-EFD400
-;
-}
 #
 errorPage
 .
@@ -193,13 +184,160 @@ background
 -
 color
 :
-#
-BF0000
+error_page_background_color
 ;
+}
+#
+errorPage
+button
+{
+margin
+:
+5px
+10px
+5px
+0
+;
+}
+#
+errorPage
+>
+.
+top
+-
+decoration
+{
+position
+:
+absolute
+;
+top
+:
+0
+;
+left
+:
+0
+;
+width
+:
+100
+%
+;
+height
+:
+25px
+;
+}
+#
+errorPage
+.
+certerror
+>
+.
+top
+-
+decoration
+{
+background
+:
+linear
+-
+gradient
+(
+-
+45deg
+error_page_background_color
+25
+%
+error_page_warning_color
+25
+%
+error_page_warning_color
+50
+%
+error_page_background_color
+50
+%
+error_page_background_color
+75
+%
+error_page_warning_color
+75
+%
+error_page_warning_color
+)
+repeat
+scroll
+0
+%
+0
+%
+/
+80px
+80px
+transparent
+;
+}
+#
+errorPage
+.
+blockedsite
+>
+.
+top
+-
+decoration
+{
+background
+:
+linear
+-
+gradient
+(
+-
+45deg
+error_page_background_color
+25
+%
+error_page_error_color
+25
+%
+error_page_error_color
+50
+%
+error_page_background_color
+50
+%
+error_page_background_color
+75
+%
+error_page_error_color
+75
+%
+error_page_error_color
+)
+repeat
+scroll
+0
+%
+0
+%
+/
+80px
+80px
+transparent
+;
+}
+#
+errorPage
+#
+cert_domain_link
+{
 color
 :
 #
-fff
+0095dd
 ;
 }
 #
@@ -284,10 +422,6 @@ end
 :
 24px
 ;
-}
-#
-errorTitle
-{
 }
 #
 errorTitleIcon
@@ -387,6 +521,124 @@ width
 40px
 ;
 }
+#
+errorPage
+.
+certerror
+#
+errorTitleIcon
+#
+errorPage
+.
+blockedsite
+#
+errorTitleIcon
+{
+background
+-
+size
+:
+60px
+60px
+;
+width
+:
+60px
+;
+height
+:
+60px
+;
+-
+moz
+-
+margin
+-
+start
+:
+-
+80px
+;
+-
+moz
+-
+margin
+-
+end
+:
+10px
+;
+}
+#
+errorPage
+.
+certerror
+#
+errorTitleIcon
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+images
+/
+errorpage
+-
+cert
+-
+untrusted
+.
+png
+"
+)
+;
+}
+#
+errorPage
+.
+blockedsite
+#
+errorTitleIcon
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+images
+/
+errorpage
+-
+blocked
+-
+site
+.
+png
+"
+)
+;
+}
 media
 (
 min
@@ -419,6 +671,82 @@ images
 errorpage
 -
 warning
+1
+.
+4x
+.
+png
+"
+)
+;
+}
+#
+errorPage
+.
+certerror
+#
+errorTitleIcon
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+images
+/
+errorpage
+-
+cert
+-
+untrusted
+1
+.
+4x
+.
+png
+"
+)
+;
+}
+#
+errorPage
+.
+blockedsite
+#
+errorTitleIcon
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+images
+/
+errorpage
+-
+blocked
+-
+site
 1
 .
 4x
@@ -470,7 +798,6 @@ png
 )
 ;
 }
-}
 #
 errorPage
 .
@@ -497,9 +824,12 @@ images
 /
 errorpage
 -
-larry
+cert
 -
-black
+untrusted
+1
+.
+8x
 .
 png
 "
@@ -532,18 +862,64 @@ images
 /
 errorpage
 -
-larry
+blocked
 -
-white
+site
+1
+.
+8x
 .
 png
 "
 )
 ;
-color
+}
+}
+media
+(
+max
+-
+width
 :
-white
+760px
+)
+{
+#
+errorPage
+.
+certerror
+#
+errorTitleIcon
+#
+errorPage
+.
+blockedsite
+#
+errorTitleIcon
+{
+display
+:
+block
 ;
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+-
+moz
+-
+margin
+-
+end
+:
+0
+;
+}
 }
 .
 errorTitleText
@@ -758,114 +1134,12 @@ top
 10px
 ;
 }
-div
-[
-collapsed
-]
-{
-padding
--
-left
-:
-15px
-;
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-arrowright
--
-16
 .
-png
-"
-)
-;
-background
+expandable
 -
-size
-:
-11px
-11px
-;
-background
--
-repeat
-:
-no
--
-repeat
-;
-background
--
-position
-:
-left
-0
-.
-6em
-;
-}
-div
-[
-collapsed
-=
-"
-true
-"
-]
+section
 {
 background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-arrowright
--
-16
-.
-png
-"
-)
-;
-}
-div
-[
-collapsed
-=
-"
-false
-"
-]
-{
-background
--
-image
 :
 url
 (
@@ -887,30 +1161,103 @@ arrowdown
 png
 "
 )
+no
+-
+repeat
+left
+0
+.
+6em
+;
+background
+-
+size
+:
+11px
+11px
 ;
 }
-div
+.
+expandable
+-
+section
 [
 collapsed
-=
-"
-true
-"
 ]
->
-p
-div
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+images
+/
+arrowright
+-
+16
+.
+png
+"
+)
+;
+}
+.
+expandable
+-
+section
 [
 collapsed
-=
-"
-true
-"
 ]
 >
-div
+.
+expandable
+-
+content
 {
 display
+:
+none
+;
+}
+.
+expandable
+-
+section
+>
+.
+expandable
+-
+heading
+{
+cursor
+:
+pointer
+;
+-
+moz
+-
+padding
+-
+start
+:
+15px
+;
+-
+moz
+-
+user
+-
+select
 :
 none
 ;
