--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -486,23 +486,6 @@ true
 ]
 :
 hover
-.
-theme
--
-light
-.
-devtools
--
-toolbarbutton
-[
-checked
-=
-true
-]
-:
-hover
-:
-active
 {
 background
 :
@@ -525,6 +508,42 @@ background
 :
 #
 eee
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+:
+hover
+:
+active
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+checked
+=
+true
+]
+:
+hover
+:
+active
+{
+background
+:
+#
+e8e8e8
 ;
 }
 .
