--- a/browser/themes/shared/devtools/splitview.css
+++ b/browser/themes/shared/devtools/splitview.css
@@ -1,3 +1,56 @@
+%
+filter
+substitution
+%
+define
+smw_marginDark
+#
+000
+%
+define
+smw_marginLight
+#
+aaa
+%
+define
+smw_itemDarkTopBorder
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+%
+define
+smw_itemDarkBottomBorder
+rgba
+(
+128
+128
+128
+0
+.
+15
+)
+%
+define
+smw_itemLightTopBorder
+rgba
+(
+128
+128
+128
+0
+.
+15
+)
+%
+define
+smw_itemLightBottomBorder
+transparent
 .
 loading
 .
@@ -83,130 +136,6 @@ appearance
 :
 none
 ;
-margin
-:
-0
-;
-}
-.
-theme
--
-dark
-.
-splitview
--
-nav
-{
-box
--
-shadow
-:
-inset
--
-1px
-0
-0
-black
-;
-}
-.
-theme
--
-light
-.
-splitview
--
-nav
-{
-box
--
-shadow
-:
-inset
--
-1px
-0
-0
-#
-aaa
-;
-}
-.
-splitview
--
-nav
->
-li
-{
-background
--
-clip
-:
-padding
--
-box
-;
-border
--
-bottom
-:
-1px
-solid
-hsla
-(
-210
-16
-%
-76
-%
-.
-1
-)
-;
-box
--
-shadow
-:
-inset
-0
--
-1px
-0
-hsla
-(
-210
-8
-%
-5
-%
-.
-25
-)
-;
--
-moz
--
-padding
--
-end
-:
-8px
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-}
-.
-splitview
--
-nav
-{
 list
 -
 style
@@ -231,12 +160,146 @@ margin
 ;
 }
 .
+theme
+-
+dark
+.
+splitview
+-
+nav
+{
+box
+-
+shadow
+:
+inset
+-
+1px
+0
+0
+smw_marginDark
+;
+}
+.
+theme
+-
+dark
+.
+splitview
+-
+nav
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+box
+-
+shadow
+:
+inset
+1px
+0
+0
+smw_marginDark
+;
+}
+.
+theme
+-
+light
+.
+splitview
+-
+nav
+{
+box
+-
+shadow
+:
+inset
+-
+1px
+0
+0
+smw_marginLight
+;
+}
+.
+theme
+-
+light
+.
+splitview
+-
+nav
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+box
+-
+shadow
+:
+inset
+1px
+0
+0
+smw_marginLight
+;
+}
+.
 splitview
 -
 nav
 >
 li
 {
+margin
+-
+top
+:
+-
+1px
+;
+margin
+-
+bottom
+:
+-
+1px
+;
+-
+moz
+-
+padding
+-
+end
+:
+8px
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
 outline
 :
 0
@@ -246,6 +309,120 @@ vertical
 align
 :
 bottom
+;
+}
+.
+theme
+-
+dark
+.
+splitview
+-
+nav
+>
+li
+{
+border
+-
+top
+:
+1px
+solid
+smw_itemDarkTopBorder
+;
+border
+-
+bottom
+:
+1px
+solid
+smw_itemDarkBottomBorder
+;
+}
+.
+theme
+-
+dark
+.
+splitview
+-
+nav
+>
+li
+:
+last
+-
+of
+-
+type
+{
+box
+-
+shadow
+:
+inset
+0
+-
+1px
+0
+smw_itemDarkTopBorder
+;
+}
+.
+theme
+-
+light
+.
+splitview
+-
+nav
+>
+li
+{
+border
+-
+top
+:
+1px
+solid
+smw_itemLightTopBorder
+;
+border
+-
+bottom
+:
+1px
+solid
+smw_itemLightBottomBorder
+;
+}
+.
+theme
+-
+light
+.
+splitview
+-
+nav
+>
+li
+:
+last
+-
+of
+-
+type
+{
+box
+-
+shadow
+:
+inset
+0
+-
+1px
+0
+smw_itemLightTopBorder
 ;
 }
 .
@@ -280,6 +457,102 @@ active
 {
 background
 -
+repeat
+:
+no
+-
+repeat
+no
+-
+repeat
+repeat
+-
+x
+;
+background
+-
+position
+:
+center
+right
+center
+right
+top
+left
+;
+background
+-
+size
+:
+auto
+1px
+auto
+;
+}
+.
+splitview
+-
+nav
+>
+li
+.
+splitview
+-
+active
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+repeat
+:
+no
+-
+repeat
+no
+-
+repeat
+repeat
+-
+x
+;
+background
+-
+position
+:
+center
+left
+center
+left
+top
+right
+;
+}
+.
+theme
+-
+dark
+.
+splitview
+-
+nav
+>
+li
+.
+splitview
+-
+active
+{
+background
+-
 image
 :
 url
@@ -296,91 +569,24 @@ linear
 -
 gradient
 (
+smw_marginDark
+smw_marginDark
+)
+linear
+-
+gradient
+(
 #
 1d4f73
 #
 1d4f73
-)
-;
-background
--
-repeat
-:
-no
--
-repeat
-repeat
--
-x
-;
-background
--
-position
-:
-center
-right
-top
-left
-;
-background
--
-size
-:
-auto
-auto
-;
-border
--
-bottom
-:
-1px
-solid
-hsla
-(
-210
-8
-%
-5
-%
-.
-25
-)
-;
-box
--
-shadow
-:
-inset
-0
-1px
-0
-hsla
-(
-210
-40
-%
-83
-%
-.
-15
-)
-inset
-0
--
-1px
-0
-hsla
-(
-210
-40
-%
-83
-%
-.
-05
 )
 ;
 }
+.
+theme
+-
+dark
 .
 splitview
 -
@@ -420,31 +626,18 @@ linear
 -
 gradient
 (
+smw_marginDark
+smw_marginDark
+)
+linear
+-
+gradient
+(
 #
 1d4f73
 #
 1d4f73
 )
-;
-background
--
-repeat
-:
-no
--
-repeat
-repeat
--
-x
-;
-background
--
-position
-:
-center
-left
-top
-right
 ;
 }
 .
@@ -478,6 +671,13 @@ linear
 -
 gradient
 (
+smw_marginLight
+smw_marginLight
+)
+linear
+-
+gradient
+(
 #
 4c9ed9
 #
@@ -520,7 +720,14 @@ itemArrow
 -
 rtl
 .
-png
+svg
+)
+linear
+-
+gradient
+(
+smw_marginLight
+smw_marginLight
 )
 linear
 -
@@ -592,7 +799,7 @@ end
 :
 1px
 solid
-black
+smw_marginDark
 ;
 }
 .
@@ -627,8 +834,7 @@ end
 :
 1px
 solid
-#
-aaa
+smw_marginLight
 ;
 }
 .
