--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -1706,12 +1706,6 @@ border
 :
 1px
 solid
-rgb
-(
-88
-94
-101
-)
 ;
 %
 ifdef
@@ -1736,6 +1730,60 @@ padding
 :
 4px
 6px
+;
+}
+.
+theme
+-
+dark
+.
+devtools
+-
+textinput
+.
+theme
+-
+dark
+.
+devtools
+-
+searchinput
+{
+border
+-
+color
+:
+rgb
+(
+88
+94
+101
+)
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+textinput
+.
+theme
+-
+light
+.
+devtools
+-
+searchinput
+{
+border
+-
+color
+:
+#
+aaa
 ;
 }
 .
