Bug 963365 - fix Australis panel layout on non-default dpi settings which cause CSS rounding errors, r=mconley
UltraBlame original commit: 4b1e52038410116a3e25b6691c63b6e8c942fc28

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -8,6 +8,131 @@ menuPanelWidth
 .
 35em
 %
+XXXgijs
+This
+is
+the
+ugliest
+bit
+of
+code
+I
+think
+I
+'
+ve
+ever
+written
+for
+Mozilla
+.
+%
+Basically
+the
+0
+.
+1px
+is
+there
+to
+avoid
+CSS
+rounding
+errors
+causing
+buttons
+to
+wrap
+.
+%
+For
+gory
+details
+refer
+to
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+963365
+#
+c11
+%
+There
+'
+s
+no
+calc
+(
+)
+here
+(
+and
+therefore
+lots
+of
+calc
+(
+)
+where
+this
+is
+used
+)
+because
+%
+we
+don
+'
+t
+support
+nested
+calc
+(
+)
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+968761
+%
+define
+menuPanelButtonWidth
+(
+menuPanelWidth
+/
+3
+-
+0
+.
+1px
+)
+%
 define
 exitSubviewGutterWidth
 38px
@@ -1393,9 +1518,7 @@ width
 :
 calc
 (
-menuPanelWidth
-/
-3
+menuPanelButtonWidth
 )
 ;
 height
@@ -1470,9 +1593,7 @@ width
 :
 calc
 (
-menuPanelWidth
-/
-3
+menuPanelButtonWidth
 -
 2px
 )
@@ -1805,9 +1926,7 @@ width
 :
 calc
 (
-menuPanelWidth
-/
-3
+menuPanelButtonWidth
 )
 ;
 margin
@@ -2063,9 +2182,9 @@ margin
 4px
 calc
 (
-menuPanelWidth
+menuPanelButtonWidth
 /
-6
+2
 -
 23px
 )
@@ -4491,9 +4610,7 @@ width
 :
 calc
 (
-menuPanelWidth
-/
-3
+menuPanelButtonWidth
 -
 2px
 )
@@ -4504,9 +4621,7 @@ width
 :
 calc
 (
-menuPanelWidth
-/
-3
+menuPanelButtonWidth
 -
 2px
 )
