Bug 967634 - DevTools Light theme tab bar bottom box shadow / border is a bit heavy;r=vporof
UltraBlame original commit: 551541f11bc93d14843d4a92f3c0104fff47896d

--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -4291,11 +4291,6 @@ appearance
 :
 none
 ;
-background
-:
-#
-252c33
-;
 min
 -
 height
@@ -4306,8 +4301,6 @@ border
 :
 0px
 solid
-#
-000
 ;
 border
 -
@@ -4317,6 +4310,62 @@ width
 :
 1px
 ;
+padding
+:
+0
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+tabbar
+{
+box
+-
+shadow
+:
+0
+-
+2px
+0
+rgba
+(
+170
+170
+170
+.
+1
+)
+inset
+;
+background
+:
+#
+ebeced
+;
+border
+-
+bottom
+-
+color
+:
+#
+aaa
+;
+}
+.
+theme
+-
+dark
+.
+devtools
+-
+tabbar
+{
 box
 -
 shadow
@@ -4335,9 +4384,19 @@ rgba
 )
 inset
 ;
-padding
+background
 :
-0
+#
+252c33
+;
+border
+-
+bottom
+-
+color
+:
+#
+000
 ;
 }
 #
@@ -4355,6 +4414,13 @@ devtools
 -
 tab
 {
+-
+moz
+-
+appearance
+:
+none
+;
 -
 moz
 -
@@ -4392,19 +4458,6 @@ align
 :
 center
 ;
-}
-.
-devtools
--
-tab
-{
--
-moz
--
-appearance
-:
-none
-;
 min
 -
 width
@@ -4423,11 +4476,6 @@ width
 :
 127px
 ;
-color
-:
-#
-b6babf
-;
 margin
 :
 0
@@ -4445,8 +4493,6 @@ start
 :
 1px
 solid
-#
-42484f
 ;
 -
 moz
@@ -4461,25 +4507,23 @@ center
 .
 theme
 -
-light
+dark
 .
 devtools
 -
-tabbar
+tab
 {
-background
+color
 :
 #
-ebeced
+b6babf
 ;
 border
--
-bottom
 -
 color
 :
 #
-aaa
+42484f
 ;
 }
 .
@@ -4490,16 +4534,6 @@ light
 devtools
 -
 tab
-.
-theme
--
-light
-.
-devtools
--
-tab
-:
-hover
 {
 color
 :
@@ -4517,6 +4551,38 @@ aaa
 .
 theme
 -
+dark
+.
+devtools
+-
+tab
+:
+hover
+{
+background
+-
+color
+:
+hsla
+(
+206
+37
+%
+4
+%
+.
+2
+)
+;
+color
+:
+#
+ced3d9
+;
+}
+.
+theme
+-
 light
 .
 devtools
@@ -4529,25 +4595,120 @@ background
 -
 color
 :
+rgba
+(
+170
+170
+170
+.
+2
+)
+;
+}
+.
+theme
+-
+dark
+.
+devtools
+-
+tab
+:
+hover
+:
+active
+{
+background
+-
+color
+:
+hsla
+(
+206
+37
+%
+4
+%
+.
+4
+)
+;
+color
+:
 #
-ddd
+f5f7fa
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+tab
+:
+hover
+:
+active
+{
+background
+-
+color
+:
+rgba
+(
+170
+170
+170
+.
+4
+)
+;
+}
+.
+theme
+-
+dark
+.
+devtools
+-
+tab
+:
+not
+(
+[
+selected
+]
+)
+[
+highlighted
+]
+{
+background
+-
+color
+:
+hsla
+(
+99
+100
+%
+14
+%
+.
+2
+)
 ;
 box
 -
 shadow
 :
 0
--
 2px
 0
-rgba
-(
-0
-0
-0
-.
-1
-)
+#
+7bc107
 inset
 ;
 }
@@ -4585,6 +4746,27 @@ rgba
 ;
 }
 .
+devtools
+-
+tab
+:
+first
+-
+child
+{
+-
+moz
+-
+border
+-
+start
+-
+width
+:
+0
+;
+}
+.
 theme
 -
 light
@@ -4611,26 +4793,9 @@ aaa
 ;
 }
 .
-devtools
+theme
 -
-tab
-:
-first
--
-child
-{
--
-moz
--
-border
--
-start
--
-width
-:
-0
-;
-}
+dark
 .
 devtools
 -
@@ -4768,63 +4933,9 @@ opacity
 ;
 }
 .
-devtools
+theme
 -
-tab
-:
-hover
-{
-background
--
-color
-:
-hsla
-(
-206
-37
-%
-4
-%
-.
-2
-)
-;
-color
-:
-#
-ced3d9
-;
-}
-.
-devtools
--
-tab
-:
-hover
-:
-active
-{
-background
--
-color
-:
-hsla
-(
-206
-37
-%
-4
-%
-.
-4
-)
-;
-color
-:
-#
-f5f7fa
-;
-}
+dark
 #
 toolbox
 -
@@ -4898,12 +5009,49 @@ tab
 selected
 ]
 {
+color
+:
+#
+f5f7fa
+;
 background
 -
 color
 :
 #
 4c9ed9
+;
+box
+-
+shadow
+:
+0
+2px
+0
+#
+d7f1ff
+inset
+0
+8px
+3px
+-
+5px
+#
+2b82bf
+inset
+0
+-
+2px
+0
+rgba
+(
+0
+0
+0
+.
+06
+)
+inset
 ;
 }
 .
@@ -5030,74 +5178,6 @@ padding
 start
 :
 1px
-;
-}
-.
-theme
--
-dark
-.
-devtools
--
-tab
-:
-not
-(
-[
-selected
-]
-)
-[
-highlighted
-]
-{
-background
--
-color
-:
-hsla
-(
-99
-100
-%
-14
-%
-.
-2
-)
-;
-box
--
-shadow
-:
-0
-2px
-0
-#
-7bc107
-inset
-;
-}
-.
-theme
--
-dark
-#
-toolbox
--
-tabs
-.
-devtools
--
-tab
-[
-selected
-]
-{
-color
-:
-#
-f5f7fa
 ;
 }
 .
