--- a/browser/themes/shared/devtools/netmonitor.inc.css
+++ b/browser/themes/shared/devtools/netmonitor.inc.css
@@ -994,16 +994,51 @@ code
 ]
 )
 {
-background
+box
 -
-color
+shadow
 :
+0
+0
+0
+1px
 rgba
 (
-95
-115
-135
+255
+255
+255
+0
+.
+4
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+32
+32
+32
 1
+.
+0
+)
+inset
+0
+0
+8px
+0
+rgba
+(
+32
+0
+0
+0
+.
+4
 )
 ;
 }
@@ -1026,17 +1061,39 @@ code
 ]
 )
 {
-background
+box
 -
-color
+shadow
 :
+0
+0
+0
+1px
 rgba
 (
-143
-161
-178
-1
+255
+255
+255
+0
+.
+4
 )
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+32
+32
+32
+0
+.
+5
+)
+inset
 ;
 }
 .
@@ -1059,280 +1116,535 @@ code
 "
 ]
 {
-background
+box
 -
-color
+shadow
 :
+0
+0
+2px
+1px
 rgba
 (
-70
-175
-227
-1
+255
+255
+255
+0
+.
+8
 )
-;
-}
-.
-theme
+inset
+0
 -
-light
-box
-.
-requests
--
-menu
--
-status
-[
-code
-^
-=
-"
-1
-"
-]
-{
-background
--
-color
-:
+6px
+4px
+0
 rgba
 (
 0
-136
-204
+0
+64
 1
+.
+0
 )
-;
-}
-.
-theme
--
-dark
-box
-.
-requests
--
-menu
--
-status
-[
-code
-^
-=
-"
-2
-"
-]
-{
-background
--
-color
-:
+inset
+0
+0
+8px
+0
 rgba
 (
-112
-191
-83
-1
-)
-;
-}
-.
-theme
--
-light
-box
-.
-requests
--
-menu
--
-status
-[
-code
-^
-=
-"
-2
-"
-]
-{
-background
--
-color
-:
-rgba
-(
-44
-187
-15
-1
-)
-;
-}
-.
-theme
--
-dark
-box
-.
-requests
--
-menu
--
-status
-[
-code
-^
-=
-"
-3
-"
-]
-{
-background
--
-color
-:
-rgba
-(
-94
-136
-176
-1
-)
-;
-}
-.
-theme
--
-light
-box
-.
-requests
--
-menu
--
-status
-[
-code
-^
-=
-"
-3
-"
-]
-{
-background
--
-color
-:
-rgba
-(
-95
-136
-176
-1
-)
-;
-}
-.
-theme
--
-dark
-box
-.
-requests
--
-menu
--
-status
-[
-code
-^
-=
-"
-4
-"
-]
-{
-background
--
-color
-:
-rgba
-(
-235
-83
-104
-1
-)
-;
-}
-.
-theme
--
-light
-box
-.
-requests
--
-menu
--
-status
-[
-code
-^
-=
-"
-4
-"
-]
-{
-background
--
-color
-:
-rgba
-(
-237
-38
-85
-1
-)
-;
-}
-.
-theme
--
-dark
-box
-.
-requests
--
-menu
--
-status
-[
-code
-^
-=
-"
-5
-"
-]
-{
-background
--
-color
-:
-rgba
-(
-223
+0
+0
 128
-255
 1
+.
+0
+)
+;
+}
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+1
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+0
+0
+128
+1
+)
+inset
+;
+}
+.
+theme
+-
+dark
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+2
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+0
+64
+0
+1
+.
+0
+)
+inset
+0
+0
+8px
+0
+rgba
+(
+0
+128
+0
+1
+.
+0
+)
+;
+}
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+2
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+0
+128
+0
+1
+)
+inset
+;
+}
+.
+theme
+-
+dark
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+3
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+64
+32
+0
+1
+.
+0
+)
+inset
+0
+0
+8px
+0
+rgba
+(
+128
+128
+0
+1
+.
+0
+)
+;
+}
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+3
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+128
+64
+0
+1
+)
+inset
+;
+}
+.
+theme
+-
+dark
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+4
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+64
+0
+0
+1
+.
+0
+)
+inset
+0
+0
+8px
+0
+rgba
+(
+128
+0
+0
+1
+.
+0
+)
+;
+}
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+4
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+128
+0
+0
+1
+)
+inset
+;
+}
+.
+theme
+-
+dark
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+5
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+64
+0
+64
+1
+.
+0
+)
+inset
+0
+0
+8px
+0
+rgba
+(
+128
+0
+128
+1
+.
+0
 )
 ;
 }
@@ -1356,17 +1668,39 @@ code
 "
 ]
 {
-background
+box
 -
-color
+shadow
 :
+0
+0
+2px
+1px
 rgba
 (
-184
-46
-229
-1
+255
+255
+255
+0
+.
+8
 )
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+128
+0
+128
+1
+.
+0
+)
+inset
 ;
 }
 #
@@ -1787,7 +2121,7 @@ padding
 -
 start
 :
-0px
+4px
 ;
 -
 moz
@@ -1980,7 +2314,7 @@ padding
 -
 start
 :
-4px
+8px
 ;
 font
 -
@@ -2003,11 +2337,337 @@ menu
 -
 timings
 -
+cap
+{
+width
+:
+4px
+;
+height
+:
+8px
+;
+box
+-
+shadow
+:
+none
+!
+important
+;
+}
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+{
+border
+:
+1px
+solid
+#
+b8c8d9
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+{
+border
+:
+1px
+solid
+#
+292e33
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+start
+{
+-
+moz
+-
+border
+-
+end
+:
+none
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+end
+{
+-
+moz
+-
+border
+-
+start
+:
+none
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+start
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
+border
+-
+radius
+:
+4px
+0
+0
+4px
+;
+transform
+-
+origin
+:
+right
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+start
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+border
+-
+radius
+:
+0
+4px
+4px
+0
+;
+transform
+-
+origin
+:
+left
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+end
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
+border
+-
+radius
+:
+0
+4px
+4px
+0
+;
+transform
+-
+origin
+:
+left
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+end
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+border
+-
+radius
+:
+4px
+0
+0
+4px
+;
+transform
+-
+origin
+:
+right
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
 box
 {
 height
 :
-9px
+8px
+;
+}
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+timings
+-
+box
+{
+border
+-
+top
+:
+1px
+solid
+#
+b8c8d9
+;
+border
+-
+bottom
+:
+1px
+solid
+#
+b8c8d9
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+box
+{
+border
+-
+top
+:
+1px
+solid
+#
+292e33
+;
+border
+-
+bottom
+:
+1px
+solid
+#
+292e33
 ;
 }
 .
@@ -2020,6 +2680,16 @@ timings
 box
 .
 blocked
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+blocked
 {
 background
 -
@@ -2027,13 +2697,45 @@ color
 :
 rgba
 (
-235
-83
-104
+255
+32
+32
 0
 .
 8
 )
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+128
+32
+32
+0
+.
+8
+)
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
 ;
 }
 .
@@ -2046,6 +2748,16 @@ timings
 box
 .
 dns
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+dns
 {
 background
 -
@@ -2053,13 +2765,45 @@ color
 :
 rgba
 (
-223
+255
 128
 255
 0
 .
-8
+6
 )
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+128
+128
+255
+1
+.
+0
+)
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
 ;
 }
 .
@@ -2072,6 +2816,16 @@ timings
 box
 .
 connect
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+connect
 {
 background
 -
@@ -2079,13 +2833,45 @@ color
 :
 rgba
 (
-217
-102
-41
+255
+128
+16
+0
+.
+4
+)
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+128
+128
+16
 0
 .
 8
 )
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
 ;
 }
 .
@@ -2102,6 +2888,20 @@ timings
 box
 .
 send
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+send
 {
 background
 -
@@ -2109,13 +2909,45 @@ color
 :
 rgba
 (
-70
-175
-227
+255
+255
+128
+0
+.
+4
+)
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+128
+255
+128
 0
 .
 8
 )
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
 ;
 }
 .
@@ -2132,6 +2964,20 @@ timings
 box
 .
 send
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+send
 {
 background
 -
@@ -2139,13 +2985,45 @@ color
 :
 rgba
 (
+255
+255
+128
 0
-136
-204
+.
+4
+)
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+128
+255
+128
 0
 .
 8
 )
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
 ;
 }
 .
@@ -2162,6 +3040,20 @@ timings
 box
 .
 wait
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+wait
 {
 background
 -
@@ -2169,13 +3061,45 @@ color
 :
 rgba
 (
-94
-136
-176
+255
+255
+255
 0
 .
-8
+2
 )
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+128
+255
+255
+0
+.
+4
+)
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
 ;
 }
 .
@@ -2192,6 +3116,20 @@ timings
 box
 .
 wait
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+wait
 {
 background
 -
@@ -2199,13 +3137,45 @@ color
 :
 rgba
 (
-95
-136
-176
+200
+200
+200
 0
 .
 8
 )
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+0
+0
+0
+0
+.
+4
+)
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
 ;
 }
 .
@@ -2222,6 +3192,20 @@ timings
 box
 .
 receive
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+receive
 {
 background
 -
@@ -2229,13 +3213,45 @@ color
 :
 rgba
 (
-112
-191
-83
-0
+255
+255
+255
+1
 .
-8
+0
 )
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+128
+255
+255
+1
+.
+0
+)
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
 ;
 }
 .
@@ -2252,6 +3268,20 @@ timings
 box
 .
 receive
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+receive
 {
 background
 -
@@ -2259,13 +3289,45 @@ color
 :
 rgba
 (
-44
-187
-15
+0
+0
+0
+0
+.
+6
+)
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+0
+0
+0
 0
 .
 8
 )
+0
+0
+1px
+0
+rgba
+(
+0
+0
+0
+1
+.
+0
+)
+inset
 ;
 }
 .
