Bug 963324 - Import mismatch menclose reftests from the MathJax testsuite. r=karlt
UltraBlame original commit: e386c02b4b9abc86c9634010d06dae3c08c9cd39

--- a/layout/reftests/mathml/menclose-1k.html
+++ b/layout/reftests/mathml/menclose-1k.html
@@ -12,10 +12,37 @@ head
 <
 title
 >
-Updiagonalarrow
+Test
+menclose
 <
 /
 title
+>
+<
+meta
+http
+-
+equiv
+=
+"
+Content
+-
+Type
+"
+content
+=
+"
+text
+/
+html
+;
+charset
+=
+UTF
+-
+8
+"
+/
 >
 <
 /
@@ -25,27 +52,32 @@ head
 body
 >
 <
-p
->
-<
 math
 >
 <
 menclose
+notation
+=
+"
+updiagonalstrike
+"
 >
 <
 mspace
 width
 =
 "
-50px
+100px
 "
 height
 =
 "
 50px
 "
+>
+<
 /
+mspace
 >
 <
 /
@@ -54,10 +86,6 @@ menclose
 <
 /
 math
->
-<
-/
-p
 >
 <
 /
