--- a/layout/reftests/mathml/menclose-1h.html
+++ b/layout/reftests/mathml/menclose-1h.html
@@ -5,6 +5,13 @@ html
 >
 <
 html
+class
+=
+"
+reftest
+-
+wait
+"
 >
 <
 head
@@ -45,6 +52,39 @@ UTF
 /
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+header
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -59,6 +99,7 @@ menclose
 notation
 =
 "
+right
 "
 >
 <
