--- a/layout/reftests/mathml/menclose-1-ref.html
+++ b/layout/reftests/mathml/menclose-1-ref.html
@@ -12,37 +12,10 @@ head
 <
 title
 >
-Test
-menclose
+Updiagonalarrow
 <
 /
 title
->
-<
-meta
-http
--
-equiv
-=
-"
-Content
--
-Type
-"
-content
-=
-"
-text
-/
-html
-;
-charset
-=
-UTF
--
-8
-"
-/
 >
 <
 /
@@ -52,6 +25,9 @@ head
 body
 >
 <
+p
+>
+<
 math
 >
 <
@@ -59,6 +35,7 @@ menclose
 notation
 =
 "
+updiagonalstrike
 "
 >
 <
@@ -66,17 +43,14 @@ mspace
 width
 =
 "
-100px
+50px
 "
 height
 =
 "
 50px
 "
->
-<
 /
-mspace
 >
 <
 /
@@ -85,6 +59,10 @@ menclose
 <
 /
 math
+>
+<
+/
+p
 >
 <
 /
