--- a/layout/reftests/mathml/menclose-1.html
+++ b/layout/reftests/mathml/menclose-1.html
@@ -12,37 +12,10 @@ head
 <
 title
 >
-Test
-menclose
+Updiagonalarrow
 <
 /
 title
->
-<
-meta
-http
--
-equiv
-=
-"
-Content
--
-Type
-"
-content
-=
-"
-text
-/
-html
-;
-charset
-=
-UTF
--
-8
-"
-/
 >
 <
 /
@@ -52,32 +25,27 @@ head
 body
 >
 <
+p
+>
+<
 math
 >
 <
 menclose
-notation
-=
-"
-updiagonalstrike
-"
 >
 <
 mspace
 width
 =
 "
-100px
+50px
 "
 height
 =
 "
 50px
 "
->
-<
 /
-mspace
 >
 <
 /
@@ -86,6 +54,10 @@ menclose
 <
 /
 math
+>
+<
+/
+p
 >
 <
 /
