--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -892,6 +892,41 @@ color
 :
 black
 ;
+border
+-
+left
+-
+style
+:
+none
+!
+important
+;
+border
+-
+right
+-
+style
+:
+none
+!
+important
+;
+}
+#
+toolbar
+-
+menubar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+{
 text
 -
 shadow
@@ -917,26 +952,6 @@ rgba
 .
 4
 )
-;
-border
--
-left
--
-style
-:
-none
-!
-important
-;
-border
--
-right
--
-style
-:
-none
-!
-important
 ;
 }
 #
@@ -1350,27 +1365,6 @@ border
 radius
 :
 4px
-;
-}
-.
-tabbrowser
--
-tab
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
-{
-text
--
-shadow
-:
-none
 ;
 }
 #
