Bug 968891 - Disable the button-text fade-out mask during the customization transition. r=Gijs
UltraBlame original commit: 718ba55ff17540c57124e5218571c0f71b925abe

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -1050,6 +1050,66 @@ hyphens
 :
 auto
 ;
+min
+-
+height
+:
+3
+.
+5em
+;
+}
+.
+panelUI
+-
+grid
+:
+not
+(
+[
+customize
+-
+transitioning
+]
+)
+.
+toolbarbutton
+-
+menubutton
+-
+button
+>
+.
+toolbarbutton
+-
+multiline
+-
+text
+.
+panelUI
+-
+grid
+:
+not
+(
+[
+customize
+-
+transitioning
+]
+)
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+multiline
+-
+text
+{
 mask
 :
 url
@@ -1068,14 +1128,6 @@ xul
 #
 menuPanelButtonTextFadeOutMask
 )
-;
-min
--
-height
-:
-3
-.
-5em
 ;
 }
 .
