Bug 879981 - make non-removable items fade out and non-draggable and adjust their cursor for Australis, r=mikedeboer
UltraBlame original commit: 68778cb670844a1b5ad3c58b69aaf2ef12dfc3c1

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1737,6 +1737,26 @@ display
 none
 ;
 }
+toolbarpaletteitem
+[
+removable
+=
+"
+false
+"
+]
+{
+opacity
+:
+0
+.
+5
+;
+cursor
+:
+default
+;
+}
 #
 bookmarks
 -
