Bug 968924 - Add shapes to network status bubbles. r=vp
UltraBlame original commit: 47f971e754b616e3c6337a305344ad5f1a91974e

--- a/browser/themes/shared/devtools/netmonitor.inc.css
+++ b/browser/themes/shared/devtools/netmonitor.inc.css
@@ -1195,13 +1195,51 @@ background
 -
 color
 :
+transparent
+;
+width
+:
+0
+;
+height
+:
+0
+;
+border
+-
+left
+:
+5px
+solid
+transparent
+;
+border
+-
+right
+:
+5px
+solid
+transparent
+;
+border
+-
+bottom
+:
+10px
+solid
 rgba
 (
-94
-136
-176
+217
+155
+40
 1
 )
+;
+border
+-
+radius
+:
+0
 ;
 }
 .
@@ -1228,13 +1266,51 @@ background
 -
 color
 :
+transparent
+;
+width
+:
+0
+;
+height
+:
+0
+;
+border
+-
+left
+:
+5px
+solid
+transparent
+;
+border
+-
+right
+:
+5px
+solid
+transparent
+;
+border
+-
+bottom
+:
+10px
+solid
 rgba
 (
-95
-136
-176
+217
+126
+0
 1
 )
+;
+border
+-
+radius
+:
+0
 ;
 }
 .
@@ -1269,6 +1345,12 @@ rgba
 1
 )
 ;
+border
+-
+radius
+:
+0
+;
 }
 .
 theme
@@ -1301,6 +1383,12 @@ rgba
 85
 1
 )
+;
+border
+-
+radius
+:
+0
 ;
 }
 .
@@ -1335,6 +1423,19 @@ rgba
 1
 )
 ;
+border
+-
+radius
+:
+0
+;
+transform
+:
+rotate
+(
+45deg
+)
+;
 }
 .
 theme
@@ -1366,6 +1467,19 @@ rgba
 46
 229
 1
+)
+;
+border
+-
+radius
+:
+0
+;
+transform
+:
+rotate
+(
+45deg
 )
 ;
 }
