Bug 967115 - fix styling of SDK toolbar buttons in Australis, r=jaws
UltraBlame original commit: aa65dca3dbff56d06c43b224a648002c4946b313

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -4281,8 +4281,8 @@ end
 ;
 padding
 :
-3px
-7px
+2px
+6px
 ;
 border
 :
@@ -4312,6 +4312,161 @@ transition
 duration
 :
 250ms
+;
+}
+:
+-
+moz
+-
+any
+(
+#
+TabsToolbar
+#
+nav
+-
+bar
+)
+.
+toolbarbutton
+-
+1
+:
+not
+(
+:
+-
+moz
+-
+any
+(
+primaryToolbarButtons
+)
+)
+>
+.
+toolbarbutton
+-
+icon
+:
+-
+moz
+-
+any
+(
+#
+TabsToolbar
+#
+nav
+-
+bar
+)
+.
+toolbarbutton
+-
+1
+:
+not
+(
+:
+-
+moz
+-
+any
+(
+primaryToolbarButtons
+)
+)
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+padding
+:
+3px
+7px
+;
+}
+toolbarbutton
+[
+sdk
+-
+button
+=
+"
+true
+"
+]
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+16px
+;
+}
+:
+-
+moz
+-
+any
+(
+#
+TabsToolbar
+#
+nav
+-
+bar
+)
+toolbarbutton
+[
+sdk
+-
+button
+=
+"
+true
+"
+]
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+32px
 ;
 }
 :
