--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -9709,6 +9709,15 @@ width
 toolbarbutton
 -
 1
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
 :
 not
 (
@@ -9730,6 +9739,15 @@ icon
 toolbarbutton
 -
 1
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
 >
 .
 toolbarbutton
@@ -9746,6 +9764,36 @@ icon
 margin
 :
 2px
+;
+}
+toolbarbutton
+[
+sdk
+-
+button
+=
+"
+true
+"
+]
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+16px
 ;
 }
 #
