--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -1583,6 +1583,58 @@ calc
 )
 ;
 }
+toolbarpaletteitem
+[
+place
+=
+"
+palette
+"
+]
+>
+#
+personal
+-
+bookmarks
+>
+#
+bookmarks
+-
+toolbar
+-
+placeholder
+#
+personal
+-
+bookmarks
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+>
+#
+bookmarks
+-
+toolbar
+-
+placeholder
+{
+height
+:
+32px
+;
+width
+:
+32px
+;
+}
 .
 customization
 -
