--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -4191,6 +4191,70 @@ padding
 7px
 ;
 }
+toolbarbutton
+[
+sdk
+-
+button
+=
+"
+true
+"
+]
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+16px
+;
+}
+#
+nav
+-
+bar
+toolbarbutton
+[
+sdk
+-
+button
+=
+"
+true
+"
+]
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+32px
+;
+}
 #
 nav
 -
