Bug 870605 - don't rely on -moz-linear-gradient, rs=trivial, DONTBUILD because idempotent CSS change only
UltraBlame original commit: 3521e02e5dc27797d4cd0b14a82d56b73ddd025e

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -234,13 +234,12 @@ background
 -
 image
 :
--
-moz
--
 linear
 -
 gradient
 (
+to
+bottom
 hsla
 (
 0
@@ -284,13 +283,12 @@ hsla
 0
 )
 )
--
-moz
--
 linear
 -
 gradient
 (
+to
+bottom
 hsla
 (
 210
@@ -334,13 +332,12 @@ hsla
 0
 )
 )
--
-moz
--
 linear
 -
 gradient
 (
+to
+bottom
 hsla
 (
 0
